- added documentation to read - added encoder/decoder for bower.son - added schema

--- a/src/gen/bowerrc.hbs
+++ b/src/gen/bowerrc.hbs
@@ -1,4 +1,6 @@
 {
+  "name": "{{#if name}}{{{name}}}{{else}}{{{@name}}}{{/if}}",
+  "version": "{{#if version}}{{{version}}}{{else}}{{{@version}}}{{/if}}",
   "registry": {
     {{#if registry_publish}}
     "publish": "{{{registry_publish}}}",
